feat(ingest) Change AIP categories to single value REGARDS-603